> fix profile page css > fix foodPage min height > fix home page chips gap and scroll bug > remove extra locomotive scroll and add destroy locomotive scroll when unmount page > fix header input width > fix change password css > fix thumbnail chips css

--- a/client/src/Pages/Food/FoodPage.module.css
+++ b/client/src/Pages/Food/FoodPage.module.css
@@ -8,6 +8,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    min-height : 100vh;
 }
 .main {
     display: flex;
